# yadro_task

./: CMakeLists.txt  README.md  run.sh
src/: awgn_channel.cpp  awgn_channel.hpp  main.cpp  qam_demodulator.cpp  qam_demodulator.hpp  qam_modulator.cpp  qam_modulator.hpp
